# EngenhariaSoftware1-Backend

./: README.md  pyproject.toml
api/Banco_ORM/: functions_modeloBD.py  modeloBD.py
api/migrations/: schema_prompt.sql  schema_user.sql
api/models/: Prompt.py  User.py
provider/: openai_provider.py
