[tool.poetry]
name = "engenhariasoftware1"
version = "0.1.0"
description = ""
authors = ["alanr <alanrios2001@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
openai = "^1.59.7"
dynaconf = "^3.2.6"
sqlalchemy = "^2.0.37"
flask = "^3.1.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
